add notes support
