# openapi.yml
@@ -774,15 +774,21 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /note:
+  /note/{studentId}:
     post:
       tags:
         - note
-      summary: Create note
+      summary: Create note for a student
       description: This can only be done by a logged in TEACHER.
       operationId: createNote
       security:
         - bearerAuth: []
+      parameters:
+       - name: studentId
+         in: path
+         required: true
+         schema:
+           type: integer
       requestBody:
         description: Created note object
         content:
@@ -808,7 +814,7 @@ paths:
     get:
       tags:
         - note
-      summary: Get all notes
+      summary: Get all notes for a student
       description: get all notes
       operationId: getNotes
       security:
@@ -819,7 +825,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Note'          
+                $ref: '#/components/schemas/AllNotes'          
         '401':
           description: fail
           content:
@@ -860,7 +866,7 @@ paths:
     delete:
       tags:
         - note
-      summary: Delete a nore by id
+      summary: Delete a note by id
       description: delete note by id
       operationId: deleteNote
       security:
@@ -892,7 +898,7 @@ paths:
              schema:
               $ref: '#/components/schemas/Error'
         '500':
-          description: error deleting Conversation
+          description: error deleting Note
           content:
             application/json:
              schema:
@@ -1496,6 +1502,20 @@ components:
                 type: string
               githubUrl:
                 type: string
+
+    AllNotes: 
+      type: object
+      properties:
+        status:
+          type: string
+        data:
+          type: object
+          properties:
+            users:
+              type: array
+              items:
+                $ref: '#/components/schemas/Note'
+
     Note:
       type: object
       properties:
