# src/routes/note.js
@@ -1,5 +1,11 @@
 import { Router } from 'express'
-import { getNoteById, updateNoteById, deleteNote } from '../controllers/note.js'
+import {
+  createNote,
+  getAllNotes,
+  getNoteById,
+  updateNoteById,
+  deleteNote
+} from '../controllers/note.js'
 import {
   validateAuthentication,
   validateTeacherRole
@@ -7,6 +13,8 @@ import {
 
 const router = Router()
 
+router.post('/:studentId', validateAuthentication, createNote)
+router.get('/:studentId', validateAuthentication, getAllNotes)
 router.delete('/:id', validateAuthentication, deleteNote)
 router.get('/:id', validateAuthentication, getNoteById)
 router.patch(
